# blade

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  wasm-index.html
.beads/: issues.jsonl  sync_base.jsonl
.cargo/: config.toml
.chrome-profile/: README.md
bench-trace/: chrome-bunnymark-analysis.md  firefox-bunnymark-analysis.md  webgpu-inspector-analysis.md
blade-graphics/: Cargo.toml  README.md
blade-graphics/etc/: FAQ.md
blade-graphics/examples/gpui-web/: main.rs  shader.wgsl
blade-graphics/examples/webgpu-game-of-life/: README.md  compute.wgsl  main.rs  render.wgsl
blade-graphics/examples/webgpu-mandelbrot/: README.md  compute.wgsl  main.rs  render.wgsl
blade-graphics/examples/webgpu-post-fx/: README.md  main.rs  postfx.wgsl  scene.wgsl
blade-graphics/examples/webgpu-sprite-batch/: README.md  main.rs  shader.wgsl
blade-graphics/examples/webgpu-texture/: README.md  main.rs  shader.wgsl
blade-graphics/examples/webgpu-triangle/: README.md  main.rs  shader.wgsl
blade-graphics/src/: lib.rs  shader.rs  util.rs
blade-graphics/src/gles/: mod.rs
blade-graphics/src/vulkan/: pipeline.rs
blade-graphics/src/webgpu/: command.rs  mod.rs  pipeline.rs  platform.rs  resource.rs  surface.rs
blade-graphics/tests/: webgpu_wasm.rs
docs/: ARCHITECTURE.md  CRATE_DEPENDENCIES.md  GLES_BACKEND.md  GPUI_WASM.md  README.md  WEBGPU.md  WEBGPU_AUDIT.md  WEBGPU_FEATURE_PARITY.md  WEBGPU_PROFILING.md  bench-webgpu.md  perf.md
docs/migration/: blade-webgpu-implementation-plan-v3.md
docs/migration/archived/: blade-webgpu-revised-implementation-plan-v2.md  blade-webgpu-revised-implementation-plan.md
docs/research/: BLADE_RENDERER_ANALYSIS.md  gpui-wasm-feasibility.md  gpui-wasm-status.md
examples/: README.md
examples/bunnymark/: compute.wgsl  main.rs  shader.wgsl
examples/frustum-cull/: README.md  cull.wgsl  main.rs  render.wgsl
examples/frustum-cull-baseline/: main.rs  render.wgsl
examples/gpui-web/: Cargo.toml  README.md  index.html  main.rs
examples/gpui-web-test/: ISSUES.md  STATUS.md  main.rs
examples/gpui-web-test/tests/: advanced.rs  aspirational.rs  events.rs  layout.rs  mod.rs  paths.rs  shadows.rs  stress.rs  text.rs  visual.rs
examples/gpui-web/src/: lib.rs
examples/mini/: main.rs
examples/particle/: main.rs  particle.rs
run-wasm-debug/: Cargo.toml  README.md
run-wasm-debug/src/: main.rs
run-wasm/src/: main.rs
scripts/: analyze-trace.py  analyze-webgpu-inspector.py
tests/: parse_shaders.rs
