[package]
name = "gpui-web"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# GPUI
gpui-ce = { path = "../../vendor/gpui-ce", default-features = false, features = ["wasm"] }

# Blade graphics for direct rendering tests
blade-graphics = { path = "../../blade-graphics" }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "console",
] }
js-sys = "0.3"

# Logging
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
